--- a/contactus.html
+++ b/contactus.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="pink">
     <center>
-        <a href="portfolio.html">Home</a>
+        <a href="index.html">Home</a>
     
     <h1>This is Contact us page</h1>
 
